--- a/report/typeclass.tex
+++ b/report/typeclass.tex
@@ -87,6 +87,6 @@ about_prot_state : forall s1 s2, prot_state s1 -> prot_state s2 ->
 }.
 \end{lstlisting}
 
-The plan here is to 1) say that our types directly correspond to CBC Casper's abstract parameters, and 2) briefly explain why the additional properties about each type are required.
+The plan here is to 1) say that our t
 
 We prove that \verb|CBC_protocol_eq| can derive \verb|PartialOrder|. 
